- change layout of molecule counts display?
- disable liquid and water sliders when beaker is full?

PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- javadoc


DONE:
7/1/08 - restructure bar graph code in preparation for flashing out this feature
7/1/08 - make molecules in count view the same size as molecules in legend
7/1/08 - adjust layout of molecules legend
7/1/08 - javadoc everything done up to this point
7/1/08 - put a translucent background behind molecule counts
******* version 0.00.06 (22824)
6/30/08 - add developer only display of particle counts, in lower left of beaker
6/30/08 - add property for min # particles of minority species, with developer control
6/30/08 - add developer control for # particles at pH=7
6/30/08 - add developer control for majority & minority species transparency
6/30/08 - use separate transparency for majority and minority species of particles
6/30/08 - use my algorithm for linear # particles to create outside pH range 6-8
6/30/08 - use Laurie's algorithm for # particles to create in pH range 6-8
******* version 0.00.05 (22811)
6/30/08 - connect particle developer control panel to ParticlesNode
6/30/08 - fix: liquid and water sliders are stuck "on" when beaker is full
6/30/08 - hook up Ratio check box
6/30/08 - port prototype code for particles to this sim
6/30/08 - developer control panel for particles view, mostly borrowed from test program
6/30/08 - fix a bunch of layout code, tweak layout of beaker
6/30/08 - add pipe to drain faucet
6/30/08 - improve faucet image
6/26/08 - fix: when beaker is empty, H2O concentration should be 0
6/26/08 - move FormattedNumberNode to piccolo-phet
6/26/08 - move TimesTenNumberFormat to phetcommon
6/26/08 - generalize TimesTenNumberFormat, a new number formatter for formats like "4.35 x 10^12"